Bug 511558 - Unicode device names are not correctly shown in device hot-plug notifications
Summary: Unicode device names are not correctly shown in device hot-plug notifications
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 6.5.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-03 04:18 UTC by dantmnf
Modified: 2025-11-29 17:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.21
Sentry Crash Report:


Attachments
the notification (74.07 KB, image/png)
2025-11-03 04:18 UTC, dantmnf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dantmnf 2025-11-03 04:18:53 UTC
Created attachment 186448 [details]
the notification

SUMMARY
Unicode device names are not correctly shown in device hot-plug notifications.

STEPS TO REPRODUCE
1. Plug in a USB device with non-ASCII Manufacturer/Product strings

OBSERVED RESULT
The Manufacturer/Product strings (UTF-8 in sysfs) are decoded with some 8-bit Latin encoding, see attached photo.

EXPECTED RESULT
Unicode device names are correctly shown.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0

ADDITIONAL INFORMATION
lsusb for the device:
$ lsusb -vd 17ef:7f3d

Bus 002 Device 007: ID 17ef:7f3d Lenovo 拯救者平板 Y700
Negotiated speed: SuperSpeed+ (10Gbps)
Device Descriptor:
  bLength                18
  bDescriptorType         1
  bcdUSB               3.20
  bDeviceClass            0 [unknown]
  bDeviceSubClass         0 [unknown]
  bDeviceProtocol         0 
  bMaxPacketSize0         9
  idVendor           0x17ef Lenovo
  idProduct          0x7f3d 拯救者平板 Y700
  bcdDevice            6.06
  iManufacturer           1 LENOVO
  iProduct                2 拯救者平板 Y700
...
Comment 1 Bug Janitor Service 2025-11-03 04:33:41 UTC
Thank you for the bug report!

However Plasma 6.3.4 no longer receives updates or maintenance from KDE; active versions are 6.4 or newer. Please upgrade to an active version as soon as your distribution makes it available to you. Plasma is a fast-moving project, and bugs in one version are often fixed in the next one.

If you need help with Plasma 6.3.4, please contact your distribution, who bears the responsibility of providing help for older releases that are no longer receiving updates from KDE.

If you can reproduce the issue after upgrading to an active version, feel free to re-open this bug report.
Comment 2 dantmnf 2025-11-03 04:37:14 UTC
My mistake, it is actually 6.5.1.
Comment 3 Bug Janitor Service 2025-11-09 13:18:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5987
Comment 4 Méven 2025-11-27 12:05:06 UTC
Git commit 3770bc5d48e08033462be4cd0365fb8329ea8b00 by Méven Car, on behalf of Nicolas Fella.
Committed on 27/11/2025 at 11:05.
Pushed by meven into branch 'master'.

[devicenotifications] Decode udev strings as UTF-8

They may contain unicode

M  +3    -3    devicenotifications/devicenotifications.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/3770bc5d48e08033462be4cd0365fb8329ea8b00
Comment 5 Nicolas Fella 2025-11-27 16:56:12 UTC
Git commit ffbbbc9405341489a36958008372acb004878638 by Nicolas Fella.
Committed on 27/11/2025 at 16:55.
Pushed by nicolasfella into branch 'Plasma/6.5'.

[devicenotifications] Decode udev strings as UTF-8

They may contain unicode
(cherry picked from commit 3770bc5d48e08033462be4cd0365fb8329ea8b00)

M  +3    -3    devicenotifications/devicenotifications.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/ffbbbc9405341489a36958008372acb004878638