[devicenotifications] Decode udev strings as UTF-8

They may contain unicode

BUG: 511558